--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,10 @@ services:
     depends_on:
       ebank-config-service:
         condition: service_healthy
+  front-end-angular:
+    build: ./angular-front-end
+    container_name: front-end-angular
+    ports:
+      - '4200:80'
+    expose:
+      - '80'
